--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "main": "index.js",
     "scripts": {
         "build": "webpack --mode production",
-        "dev": "webpack serve --mode development"
+        "dev": "webpack serve --mode development",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     },
     "author": "TripleTen",
     "license": "ISC",
@@ -27,5 +29,6 @@
     },
     "dependencies": {
         "core-js": "3.23.5"
-    }
+    },
+    "homepage": "https://reondaze-a.github.io/spots_project/"
 }
